--- a/Comparison.html
+++ b/Comparison.html
@@ -66,7 +66,7 @@
                             <h3 class="title">EMXT vs. Fire Extent</h3>
                             <br>
                             <a href="EMXT.html">
-                            <img class="img-fluid" src="Resources/EMXT-Duration.png" alt="EMXT Graph">
+                            <img class="img-fluid" src="Resources/EMXT-Extent.png" alt="EMXT Graph">
                             </a>
                         </div>
                     </div>
