--- a/DX90.html
+++ b/DX90.html
@@ -79,7 +79,7 @@
                     <div class="row" style="padding-bottom: 20px; padding-right: 20px; padding-left: 20px;">
                         <div class="col-sm-12">
                             <a href="EMXT.html">
-                            <img class="img-fluid" src="Resources/EMXT-Duration.png" alt="EMXT Graph">
+                            <img class="img-fluid" src="Resources/EMXT-Extent.png" alt="EMXT Graph">
                             </a>
                         </div>
                     </div>
