--- a/EMXT.html
+++ b/EMXT.html
@@ -78,7 +78,7 @@
                     <span class="border border-3 border-dark">
                         <div class="col-sm-12">
                             <a href="EMXT.html">
-                            <img class="img-fluid" src="Resources/EMXT-Duration.png" alt="EMXT Graph">
+                            <img class="img-fluid" src="Resources/EMXT-Extent.png" alt="EMXT Graph">
                             </a>
                         </div>
                     </span>
