--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="col-sm-12">
                             <div class="title">EMXT vs. Fire Extent</div>
                             <a href="EMXT.html">
-                            <img class="img-fluid" src="Resources/EMXT-Duration.png" alt="EMXT Graph">
+                            <img class="img-fluid" src="Resources/EMXT-Extent.png" alt="EMXT Graph">
                             </a>
                         </div>
                     </div>
